<resources>
    <string name="app_name">BambuPay</string>
    <string name="demo_microblink_key">sRwAAAAQY29tLnV4aS5iYW1idXBhebZAofRiTBeMqaLJWyVFm7CEX6YdI6thaZ35okaYVPGMGGJiLZb5yo8BmYY+GXr6h324PUPltGFg4UCL7Bd6G8FQE13zvnSVfhjbn1XogQ87HLo4zZ9ZBATiNEHjExH9jX+UEZ7cVeyR1SU742FW1RlQiNRPPmDq4SttzPlZEscOxZTEU8x90bINI7spTFp1Lot54phgPlXI4fzXRQo8HB0r+9miO72EqLrxf49cehrrSyBHQxQofseMFg62LnUIk1HyHIEbCKHjoA==</string>
    <string name="ubp_client_id">854b7778-c9d3-4b3e-9fd5-21c828f7df39</string>
    <string name="ubp_client_secret">mJ5bF5kG2mK8bV3wP5oV4qT6iQ0eW8cT4kG5yR3eD1nV4wP7uM</string>
    <string name="ubp_partner_id">5dff2cdf-ef15-48fb-a87b-375ebff415bb</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_logout">Logout</string>
    <string name="action_okay">Okay</string>
    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_faq">FAQ</string>
    <string name="menu_about">About</string>
    <string name="current_balance">Current Balance</string>
    <string name="ph_currency">₱ %s</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="view_all">View all</string>
    <string name="pay">Pay</string>
    <string name="scan">Scan</string>
    <string name="scan_press">Press button to Scan</string>
    <string name="cash_out">Cash Out</string>
    <string name="cash_in">Cash In</string>
    <string name="scan_pay">ScanPayQR</string>
    <string name="create_qr">CreatePayQR</string>
    <string name="create_scan_qr">CreateScanQR</string>
    <string name="quick_qr">QuickPayQR</string>
    <string name="income_shares">Income Shares</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_details">to access\nyour account</string>
    <string name="email">Email address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email_verification">Email Verification</string>
    <string name="mobile_verification">Mobile Verification</string>
    <string name="register">Register</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="register_details">Please fill up this form to create an account.</string>
    <string name="capture_id">Capture ID card</string>
    <string name="capture_photo">Upload Profile Picture</string>
    <string name="account_details">Account Details</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Birthday</string>
    <string name="place_of_birth">Place of Birth</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="transaction_status">Status</string>
    <string name="card_details">Card Details</string>
    <string name="card_name">Card Name</string>
    <string name="card_number">Card Number</string>
    <string name="card_expiry_date">Expiry Date</string>
    <string name="card_cvv">CVV</string>
    <string name="agreement">I accept end-user license agreement.</string>
    <string name="city">City</string>
    <string name="house_no">House No. / Unit No. / Building</string>
    <string name="street">Street</string>
    <string name="barangay">Barangay</string>
    <string name="state">State / Province / Region</string>
    <string name="postal_code">Postal Code</string>
    <string name="source_of_funds">Source of Funds</string>
    <string name="nature_of_work">Nature of Work</string>
    <string name="id_type">ID Type</string>
    <string name="id_number">ID Number</string>
    <string name="id_expiration">ID Expiration Date</string>
    <string name="id_front">ID Front</string>
    <string name="id_back">ID Back</string>
    <string name="agent_code">Agent Code</string>
    <string name="send_money">Send Money</string>
    <string name="transact">Transaction</string>
    <string name="amount">Amount</string>
    <string name="send_mobile">Send to Mobile Number</string>
    <string name="optional_msg">Optional Message</string>
    <string name="optional">(Optional)</string>
    <string name="cancel">Cancel</string>
    <string name="cash_out_details">Cash Out Details</string>
    <string name="cash_in_details">Cash In Details</string>
    <string name="send_card">Send to Card Number Ending</string>
    <string name="send">Send</string>
    <string name="transaction_history">Transaction History</string>
    <string name="date">Date</string>
    <string name="date_time">Date / Time </string>
    <string name="message">Message</string>
    <string name="reference_id">Reference ID</string>
    <string name="transaction_details">Transaction Details</string>
    <string name="about_content">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</string>
    <string name="copyright">Copyright © 2020 BambuPay, All right reserved. </string>
    <string name="powered_by">Powered by www.uxi.rocks</string>
    <string name="change_password">Change Password</string>
    <string name="additional_info">Additional Information</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms">Terms &amp; Conditions</string>
    <string name="contact_us">Contact Us</string>
    <string name="sign_out">Sign Out</string>
    <string name="skip">Skip</string>
    <string name="page1">Send Money</string>
    <string name="page2">Easy payments</string>
    <string name="page3">High level security</string>
    <string name="page1_desc">Avoid long queues by transferring money in real-time to other BambuPay client App users or a nominated bank account.</string>
    <string name="page2_desc">Enjoy cashless on-the-go transactions at reasonable fees. Cash-in/pay-in comes with various methods, like credit or debit card cash-in/pay-in, bank transfers, and purchase of payments via QR Code.</string>
    <string name="page3_desc">Our mobile platform technology uses world-class security protocols and fraud control systems, ensuring all transactions are protected, secure, and reliable.</string>
    <string name="verification_title">Enter verification code we just sent you via email</string>
    <string name="verification">Verification</string>
    <string name="otp_title">Please enter OTP number</string>
    <string name="otp">OTP</string>
    <string name="resend_otp">Re-send OTP Number</string>
    <string name="pending">Pending</string>
    <string name="approved">Approved</string>
    <string name="cancelled">Cancelled</string>
    <string name="dialog_logout">Are you sure you want to logout?</string>
    <string name="signup_no_lastname">Please input last name</string>
    <string name="signup_no_firstname">Please input first name</string>
    <string name="signup_no_gender">Please input gender</string>
    <string name="signup_no_dob">Please input date of birth</string>
    <string name="signup_no_id">Please input id number</string>
    <string name="signup_no_mobile">Please input correct mobile number</string>
    <string name="signup_no_email">Please enter a valid email address</string>
    <string name="signup_no_password">Please enter a password that contains at least 8 characters</string>
    <string name="signup_password_mismatch">Password Mismatch</string>
    <string name="signup_no_consent">Consent is required</string>
    <string name="signup_no_verify">Please enter a valid verification code</string>
    <string name="signup_no_pob">Please enter place of birth</string>
    <string name="signup_no_postal_code">Please enter postal code</string>
    <string name="signup_no_id_number">Please enter id number</string>
    <string name="signup_no_id_expiration_date">Please enter id expiration date</string>
    <string name="signup_no_id_front">Please attached front id picture</string>
    <string name="signup_no_id_back">Please attached back id picture</string>
    <string name="signup_no_agent_code">Please input Agent Code. If none, just input 0</string>
    <string name="signup_no_house_no">Please enter house no.</string>
    <string name="signup_no_street">Please enter street</string>
    <string name="signup_no_brgy">Please enter brgy</string>
    <string name="signup_no_city">Please enter city</string>
    <string name="cash_in_merchant">Cash In via Merchant (Over The Counter)</string>
    <string name="cash_in_bank">Cash In via Bank</string>
    <string name="cash_in_card">Cash In via Credit or Debit Card</string>
    <string name="cash_in_bancnet">Cash In via Bancnet</string>
    <string name="cash_in_grab_pay">Cash In via GrabPay</string>
    <string name="cash_in_gcash">Cash In via GCash</string>
    <string name="cash_in_paymaya">Cash In via Paymaya</string>
    <string name="select_bank">Select a Bank</string>
    <string name="union_bank_login">Unionbank Login</string>
    <string name="bank_transfer">Bank Transfer</string>
    <string name="request_money">Request Money</string>
    <string name="pay_qr_code">Pay QR</string>
    <string name="pay_bills">Pay Bills</string>
    <string name="show_more">Show More</string>
    <string name="account_no">Recipient Account No.</string>
    <string name="account_name">Recipient Account Name</string>
    <string name="fee">Fee</string>
    <string name="sender">Sender</string>
    <string name="recipient">Recipient</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_image">Choose from library</string>
    <string name="me_permission_gallery_title">Gallery unavailable</string>
    <string name="me_permission_gallery_msg">You can grant access to the photos from within the Android Settings screen</string>
    <string name="me_permission_camera_title">Camera unavailable</string>
    <string name="me_permission_camera_msg">You can grant access to the camera from within the Android Settings screen</string>
    <string name="me_permission_document_title">Document picker unavailable</string>
    <string name="me_permission_document_msg">You can grant access to the documents from within the Android Settings screen</string>
    <string name="me_permission_btn">Got it</string>
    <string name="make_new_transaction">New Transaction</string>
    <string name="go_back_to_dashboard">Go to Dashboard</string>
    <string name="amount_value">₱ %s</string>
    <string name="retry">Retry</string>
    <string name="clear">Clear</string>
    <string name="generate_qr">Generate QR Code</string>
    <string name="amount_required">Amount Required</string>
    <string name="convenience_fee_msg">A Convenience Fee of ₱%s will be charged to this transaction. Would you like to proceed?</string>
</resources>