<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.activity.RegisterActivity"
    tools:showIn="@layout/activity_register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:orientation="vertical">

            <TextView
                style="@style/TextViewSmallTitle.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="@color/green" />

            <TextView
                style="@style/TextViewSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_details"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp"
            android:background="@drawable/bg_rounded_top_white"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="160dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/bg_img_preview" />

                <TextView
                    style="@style/TextViewTiny.Regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:drawableTop="@drawable/ic_camera"
                    android:text="@string/capture_id" />

            </RelativeLayout>

            <TextView
                style="@style/TextViewSmallBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/account_details"
                android:textColor="@color/green" />

            <TextView
                style="@style/TextViewSmall.SemiBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/fname" />

            <EditText
                style="@style/EditTextViewSmall.Regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords" />

            <TextView
                style="@style/TextViewSmall.SemiBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/lname" />

            <EditText
                style="@style/EditTextViewSmall.Regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords" />

            <TextView
                style="@style/TextViewSmall.SemiBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/email" />

            <EditText
                style="@style/EditTextViewSmall.Regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

            <TextView
                style="@style/TextViewSmall.SemiBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/password" />

            <EditText
                style="@style/EditTextViewSmall.Regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

            <TextView
                style="@style/TextViewSmall.SemiBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/confirm_password" />

            <EditText
                style="@style/EditTextViewSmall.Regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

            <TextView
                style="@style/TextViewSmallBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/card_details"
                android:textColor="@color/green" />

            <TextView
                style="@style/TextViewSmall.SemiBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/card_name" />

            <EditText
                style="@style/EditTextViewSmall.Regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords" />

            <TextView
                style="@style/TextViewSmall.SemiBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/card_number" />

            <com.braintreepayments.cardform.view.CardEditText
                android:id="@+id/input_text_credit_card"
                style="@style/EditTextViewSmall.Regular"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center_vertical"
                android:paddingRight="0dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextViewSmall.SemiBold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_horizontal_margin"
                        android:text="@string/card_expiry_date" />

                    <EditText
                        android:id="@+id/input_card_expiry"
                        style="@style/EditTextViewSmall.Regular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="MM/YY"
                        android:inputType="phone"
                        android:maxLength="5" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextViewSmall.SemiBold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_horizontal_margin"
                        android:text="@string/card_cvv" />

                    <EditText
                        style="@style/EditTextViewSmall.Regular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="123"
                        android:inputType="numberPassword"
                        android:maxLength="4" />

                </LinearLayout>

            </LinearLayout>

            <CheckBox
                style="@style/TextViewSmall.Regular2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="-6dp"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:buttonTint="@color/green"
                android:paddingStart="10dp"
                android:text="@string/agreement"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btn_register"
                style="@style/TextViewSmallBody.Bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/bg_rounded_green"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btn_disclaimer"
                style="@style/TextViewSmallBody.Bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:background="@drawable/bg_rounded_white_border_green"
                android:text="@string/disclaimer"
                android:textAllCaps="false"
                android:textColor="@color/green" />

            <View
                android:layout_width="match_parent"
                android:layout_height="50dp" />

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>